[package]
name = "masq_client"
version = "0.1.0"
edition = "2021"

[dependencies]
argh = "0.1.10"
tokio = { version="1.27.0", default-features = false, features = [ "macros" ] }
log = { version = "0.4", features = ["std"] }
env_logger = "0.10"
masquerade-proxy = { git = "https://github.com/feng-king/masquerade", tag = "0.1.0" }

